[gd_scene load_steps=12 format=3 uid="uid://dkhy3xf73vg4w"]

[ext_resource type="Script" uid="uid://cic7msw6ux3nj" path="res://UpgradeMenu/UpgradeMenu.gd" id="1_xxa32"]
[ext_resource type="Texture2D" uid="uid://wao6rmmiyg37" path="res://Resources/SpriteSheet.png" id="2_7p7kr"]
[ext_resource type="Script" uid="uid://duhk6aaplq3x5" path="res://UpgradeMenu/Button/UpgradeButton.gd" id="3_7p7kr"]
[ext_resource type="PackedScene" uid="uid://3by0jaf1i2cm" path="res://UpgradeMenu/Cost/UpgradeCost.tscn" id="4_do5a3"]
[ext_resource type="PackedScene" uid="uid://ca53xf0yu0a02" path="res://UpgradeMenu/Bar/UpdateBar.tscn" id="5_6qr5e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4xni"]
atlas = ExtResource("2_7p7kr")
region = Rect2(316, 149, 82, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_s63oj"]
atlas = ExtResource("2_7p7kr")
region = Rect2(336, 32, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_do5a3"]
atlas = ExtResource("2_7p7kr")
region = Rect2(336, 44, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6tjf"]
atlas = ExtResource("2_7p7kr")
region = Rect2(336, 38, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qr5e"]
atlas = ExtResource("2_7p7kr")
region = Rect2(336, 44, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_7optk"]
atlas = ExtResource("2_7p7kr")
region = Rect2(336, 38, 8, 5)

[node name="UpgradeMenu" type="Control" node_paths=PackedStringArray("bar_type1", "bar_type2")]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 23.0
grow_horizontal = 2
script = ExtResource("1_xxa32")
bar_type1 = NodePath("AutoGainBar")
bar_type2 = NodePath("AutoSpeedBar")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 23.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_a4xni")
stretch_mode = 2

[node name="AutoGainButton" type="TextureButton" parent="." node_paths=PackedStringArray("update_bar")]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 15.0
mouse_filter = 1
texture_normal = SubResource("AtlasTexture_s63oj")
texture_pressed = SubResource("AtlasTexture_do5a3")
texture_hover = SubResource("AtlasTexture_s6tjf")
script = ExtResource("3_7p7kr")
update_bar = NodePath("../AutoGainBar")

[node name="AutoSpeedButton" type="TextureButton" parent="." node_paths=PackedStringArray("update_bar")]
layout_mode = 0
offset_left = 2.0
offset_top = 16.0
offset_right = 10.0
offset_bottom = 21.0
mouse_filter = 1
texture_normal = SubResource("AtlasTexture_s63oj")
texture_pressed = SubResource("AtlasTexture_6qr5e")
texture_hover = SubResource("AtlasTexture_7optk")
script = ExtResource("3_7p7kr")
update_bar = NodePath("../AutoSpeedBar")

[node name="AutoGainBar" parent="." instance=ExtResource("5_6qr5e")]
layout_mode = 1
offset_left = 11.0
offset_top = 10.0
offset_right = -71.0
offset_bottom = -13.0
bar_type = "auto_gain"

[node name="AutoSpeedBar" parent="." instance=ExtResource("5_6qr5e")]
layout_mode = 1
offset_left = 11.0
offset_top = 16.0
offset_right = -71.0
offset_bottom = -7.0
bar_type = "auto_speed"

[node name="UpgradeCost" parent="." instance=ExtResource("4_do5a3")]
layout_mode = 0
offset_left = -27.0
offset_top = 3.0
offset_right = -27.0
offset_bottom = 3.0
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="AutoGainButton" to="AutoGainButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AutoGainButton" to="AutoGainButton" method="_on_mouse_exited"]
[connection signal="pressed" from="AutoGainButton" to="AutoGainButton" method="_on_pressed"]
[connection signal="mouse_entered" from="AutoSpeedButton" to="AutoSpeedButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AutoSpeedButton" to="AutoSpeedButton" method="_on_mouse_exited"]
[connection signal="pressed" from="AutoSpeedButton" to="AutoSpeedButton" method="_on_pressed"]
